# toypayments

./: .gitignore  Cargo.toml  README.md  generator_params.toml  rustfmt.toml
src/: account.rs  engine.rs  main.rs  transaction.rs
tests/: integration.rs  sample2_dispute.csv  sample3_chargeback.csv  sample4_errors.csv  small_params.toml
