[package]
name = "toypayments"
version = "0.1.0"
edition = "2021"
default-run = "toypayments"

[[bin]]
name = "toypayments"
path = "src/main.rs"

[dependencies]
anyhow = "1"
csv = "1"
rand = "0.8"
rust_decimal = { version = "1.39.0", features = ["serde", "serde-with-str"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"